--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 layout: default
 title: WsztRush's Blog
 ---
-<ul>
+<ul class="cul">
 	{% for post in paginator.posts %}
-	<li><a href="{{site.baseurl}}{{post.url}}"> {{post.title}}</a></li>
+	<li class="cli"><a href="{{site.baseurl}}{{post.url}}"> {{post.title}}</a></li>
 	{% endfor %}
 </ul>
 
